<?xml version="1.0" encoding="utf-8"?>
<!--TODO: Allow for runtime inclusion of a button for teams that the user is already a part of - fragment?-->
<!--TODO: Eye for design...get an artist's take (wife!)  Color scheme for the whole app -->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_height="262dp"
        app:srcCompat="@drawable/team_up" />

    <Button
        android:id="@+id/setAlarmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="launchSetAlarm"
        android:text="Set your Alarm!" />

    <Button
        android:id="@+id/teamViewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="launchTeamView"
        android:text="Click here for a sample team page" />


    <Button
        android:id="@+id/teamOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="launchTeamOptions"
        android:text="@string/team_options_button_label" />

    <Button
        android:id="@+id/homePageSettingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="launchSettings"
        android:text="@string/settings_button_label" />

    <Button
        android:id="@+id/homePageAboutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="launchAbout"
        android:text="@string/about_button_label" />

    <Space
        android:layout_width="match_parent"
        android:layout_weight="5"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/versionCopyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/copyright_version_statement" />
</LinearLayout>

