<?xml version="1.0" encoding="utf-8"?>
<!--TODO Make the Account balance link to a donation page-->
<!--TODO Make the Account balance and burn rate GET data from the web server-->
<!--TODO Make the balance, burn rate, and copright statement show up.  Frame layout so one can show on top of the other?-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_marginHorizontal="15dp"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="50dp"
    android:background="@android:color/darker_gray"
    android:padding="15dp"
    tools:context=".About">


    <TextView
        android:id="@+id/aboutNarrative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/black"
        android:text="@string/about_narrative"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backToMainFromAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="launchMain"
        android:text="Back to main menu"
        app:layout_constraintBottom_toBottomOf="parent" />


    <TextView
        android:id="@+id/versionCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright_version_statement"
        app:layout_constraintBottom_toBottomOf="@id/aboutNarrative" />

    <TextView
        android:id="@+id/accountBalanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_balance"
        android:color="@android:color/holo_blue_bright"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/aboutNarrative"
        />

    <TextView
        android:id="@+id/burnRateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/burn_rate"
        android:color="@android:color/holo_red_dark"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/aboutNarrative"
        app:layout_constraintLeft_toRightOf="@id/burnRateLabel"
        />


</androidx.constraintlayout.widget.ConstraintLayout>

